kyverno-policies/cis/custom/resources-5.2.1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-dedicated-sa
  namespace: default
spec:
  serviceAccountName: app-specific-sa # Compliant - uses dedicated SA
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-default-sa
  namespace: default
spec:
  serviceAccountName: default # Non-compliant - uses default SA
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-in-exempt-namespace
  namespace: kube-system # Exempt namespace
spec:
  serviceAccountName: default # Allowed in kube-system
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: sa-with-irsa
  namespace: default
  annotations:
    eks.amazonaws.com/role-arn: arn:aws:iam::123456789012:role/my-app-role # Compliant
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: sa-without-irsa
  namespace: default
  # Missing IRSA annotation - Non-compliant
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: sa-in-kube-system
  namespace: kube-system # Exempt namespace
  # No annotation needed here due to namespace exclusion in policy
